--- a/github-ci.yaml
+++ b/github-ci.yaml
@@ -14,7 +14,7 @@ jobs:
       - name: build & push docker image
         uses: mr-smithers-excellent/docker-build-push@v6
         with:
-          image: tokichii/timetable
+          image: app/students_db
           tags: latest
           registry: docker.io
           dockerfile: Dockerfile
