--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,5 @@
 version: '3.9'
 services:
-  app:
-    build: .
-    command: ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "80"]
-    ports:
-      - "80:80"
-    depends_on:
-      - db
-    environment:
-      - DB_URL=postgresql://postgres:6201111@db/students_db
-    volumes:
-      - ./:/code/app
-
   db:
     image: postgres:alpine
     container_name: db
@@ -24,7 +12,17 @@ services:
       - POSTGRES_PASSWORD=6201111
       - POSTGRES_DB=students_db
 
+  app:
+    build: .
+    command: [ "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8080" ]
+    ports:
+      - "8080:8080"
+    depends_on:
+      - db
+    environment:
+      - DB_URL=postgresql://postgres:6201111@db:5432/students_db
+    volumes:
+      - .:/app
+
 volumes:
   postgres_data:
-    name: postgres-data
-    driver: local
