--- a/.github/workflows/github-ci.yaml
+++ b/.github/workflows/github-ci.yaml
@@ -20,3 +20,11 @@ jobs:
           name: student_db
           timeout: 8m
           variables: ${{ secrets.ENV_FILE }}
+
+      - name: migrations
+        uses: actions/github-script@v6
+        id: alembic-migration
+        with:
+          result-encoding: string
+          retries: 3
+          script: docker-compose exec -T app bash -c "cd app && alembic upgrade head"
