push ``github-ci.yaml`` remove migrations

--- a/.github/workflows/github-ci.yaml
+++ b/.github/workflows/github-ci.yaml
@@ -17,5 +17,6 @@ jobs:
       - name: deploy
         uses: okteto/pipeline@latest
         with:
+          name: MobileAppServer
           timeout: 8m
           variables: ${{ secrets.ENV_FILE }}
